# oscode

./: .gitignore  CMakeLists.txt  README.rst  setup.py
examples/: CMakeLists.txt  burst.cpp
include/oscode/: interpolator.hpp  macros.hpp  rksolver.hpp  solver.hpp  system.hpp  wkbsolver.hpp
pyoscode/: __init__.py  _pyoscode.cpp  _pyoscode.hpp  _python.hpp
tests/: burst_test.cpp
